  when placed in $prefix/share/systemtap/tapset/PATH/usr/bin/

  This is intended to help write more reusable tapsets for userspace binaries.

- The implementation of "var <<< X" for each aggregate variable is now
  specially compiled to compute only the script-requested @op(var) values,
  not all potential ones.  This speeds up the <<< operations.

- Netfilter tapsets now provide variables data_hex and data_str to display packet
  contents in hexadecimal and ASCII respectively.

- Translator now accepts new @const() operator for convenient expressing
  constants in tapset code, or guru-mode scripts. See stap(1) for details.

- New -T option allows the script to be terminated after a specified number
  of seconds. This is a shortcut for adding the probe, timer {exit()}.

- New installcheck-parallel testsuite feature allows running the tests in
  parallel in order to save time.  See testsuite/README for details.

- New tapset functions set_user_string(), set_user_string_n(), set_user_long()
  set_user_int(), set_user_short(), set_user_char() and set_user_pointer() to
  write a value of specified type directly to a user space address.

- New tapset functions user_buffer_quoted(), user_buffer_quoted_error(), 
  kernel_buffer_quoted(), and kernel_buffer_quoted_error() to print a
  buffer of an exact length.  These functions can handle '\0' characters
  as well.  

- New statistics @variance() operator using the Welford's online algorithm
  for per-cpu computation, and the Total Variance formula authored by
  Niranjan Kamat and Arnab Nandi from the Ohio State University for the
  cross-cpu aggregation.

* What's new in version 3.0, 2016-03-27

- The new experimental "interactive" mode, specified by "stap -i",
  drops you into a command-line prompt where you can build up a script,
  run it, edit it, run it again, etc. Type "help" for a list of commands.

- New experimental --monitor[=INTERVAL] option similar to unix "top". This